push the most up to date version

--- a/src/pages/components/ImageGallery.mdx
+++ b/src/pages/components/ImageGallery.mdx
@@ -22,6 +22,8 @@ Click on an image to open the gallery.
 
 </ImageGalleryImage>
 
+[Amith Singhee](asinghee@in.ibm.com)
+
 <ImageGalleryImage  alt="IBM Cloud Logo" title="IBM Cloud" col={4}>
 
 ![IBM Cloud Logo](/images/IBM_Cloud_Logo.jpg)
