--- a/src/pages/program-overview/index.mdx
+++ b/src/pages/program-overview/index.mdx
@@ -10,11 +10,18 @@ IBM Family Science is a hands-on science program offered by IBM Research to insp
 
 ![Children at program](./images/image001.jpg)
 
-The program has evolved over 30 years and was developed by scientists at IBM who believe that science should be fun! This local educational outreach program is normally taught at IBM Research Headquarters location in Yorktown, New York. The objectives are to show children that science is part of everyday life and to help foster their interest in learning. Children work together with their parents and IBM researchers on science experiments covering several topics including:
+The program has evolved over 32 years and was developed by scientists at IBM who believe that science should be fun! This local educational outreach program is normally taught at IBM Research Headquarters location in Yorktown, New York. The objectives are to show children that science is part of everyday life and to help foster their interest in learning. Children work together with their parents and IBM researchers on science experiments covering several topics including:
 
 * Kitchen Chemistry
 * States of Matter
 * Polymer Science
 * Electronics
-* Algorithms
+* Climate Change
 * Waves
+
+
+Want to help inspire young minds – if you would like more information on the program or would like to volunteer: <br />
+In Africa, please contact&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;tamara.govindasamy@ibm.com <br/>
+In India, please contact &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;rangurup@in.ibm.com <br/>
+In the US, please contact &nbsp;&nbsp;&nbsp;grace.kaplan@ibm.com <br/>
+ 
